--- a/basicImplementationDotNet/wwwroot/checkout.html
+++ b/basicImplementationDotNet/wwwroot/checkout.html
@@ -14,6 +14,7 @@
         }
     </style>
     <link rel="stylesheet" href="/static/style.css" />
+    <link rel="preconnect" href="https://sdk.primer.io" crossorigin />
 </head>
 <body>
 <noscript>
