--- a/fullImplementation/src/static/checkout.html
+++ b/fullImplementation/src/static/checkout.html
@@ -80,6 +80,9 @@
           </div>
           <div class="col-8">
             <h1 class="d-none d-md-block">Monoova Payments</h1>
+            <div class="col-2">
+              <a href="/logout" class="btn btn-info" role="button">Logout</a>
+            </div>
           </div>
         </div>
         <h4 class="d-none d-md-block">
