MOV-7767 - Default true

--- a/fullImplementation/src/static/checkout.html
+++ b/fullImplementation/src/static/checkout.html
@@ -225,7 +225,7 @@
               </div>
               <div class="row g-2">
                 <div class="mb-3 col-12">
-                  <input type="checkbox" class="form-check-input" id="capturePayment" />
+                  <input type="checkbox" class="form-check-input" id="capturePayment" checked />
                   <label class="form-check-label" for="capturePayment">Capture Payments</label>
                 </div>
               </div>
