--- a/basicImplementationDotNet/wwwroot/checkout.html
+++ b/basicImplementationDotNet/wwwroot/checkout.html
@@ -8,7 +8,7 @@
     <style>
       #checkout-container {
         display: flex;
-        flex-direction: col mt-2umn;
+        flex-direction: column;
         padding: 12px 24px;
       }
     </style>
